--- a/index.html
+++ b/index.html
@@ -19,21 +19,31 @@
     </div>
 
     <div class="filter-bar">
-      <label for="genre-select">Select a genre(s):</label>
-      <select id="genre-select" class="genre" multiple></select>
-
+      <div class="dropdown" id="genre-dropdown">
+        <button class="dropdown-button">Select Genre</button>
+        <div class="dropdown-content" id="genre-checkboxes">
+            <!-- Genre checkboxes will be added dynamically here -->
+        </div>
+    </div>
       <div id="year-range-slider"></div>
       <span id="year-range-output">2005 - 2025</span>
     </div>
   </header>
 
   <!-- Main content area for charts -->
-  <section class="chart-container">
-    <div class="chart" id="chart1">Chart 1</div>
-    <div class="chart" id="chart2">Chart 2</div>
-    <div class="chart" id="chart3">Chart 3</div>
+  <section class="chart-containers">
+    <div class="top_charts">
+        <div class="chart" id="chart1"></div>
+        <div class="chart" id="chart2"></div>
+      </div>
+      <div class="bottom_charts">
+        <div class="chart" id="chart3"></div>
+        <div class="chart" id="chart4"></div>
+      </div>
+    </div>
   </section>
 
+  <!-- Implementing noUiSlider -->
   <script src="https://cdn.jsdelivr.net/npm/nouislider/distribute/nouislider.min.js"></script>
   <script>
     let slider = document.getElementById('year-range-slider');
@@ -53,6 +63,12 @@
       document.getElementById('year-range-output').innerText = values[0] + ' - ' + values[1];
     });
   </script>
+
+  <!-- Adding JS file and d3 library -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="static/js/app.js"></script>
+
+
 
 </body>
 
