--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
         <div class="chart-container">
           <div class="chart-header">
+            <h3>FUN FACTS</h3>
             <div class="chart" id="chart2"></div>
           </div>
         </div>
@@ -58,6 +59,7 @@
       </div>
       <div class="chart-container">
         <div class="chart-header">
+          <h3>Static Correlation Coefficient Heatmap</h3>
           <div class="chart" id="chart4"></div>
         </div>
       </div>
