Adding Holly's fun facts section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     
   <!-- Adding JS file and d3 library -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <!-- Adding d3 textwrap functionality -->
+  <script src="https://cdn.jsdelivr.net/npm/d3-textwrap/dist/d3-textwrap.min.js"></script>
   <script src="static/js/app.js"></script>
 </head>
 
