--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="chart-container">
           <div class="chart-header">
-            <h3>FUN FACTS</h3>
+            <h3>Holly's Trivia Treasures</h3>
             <div class="chart" id="chart2"></div>
           </div>
         </div>
