--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="filter-bar">
       <div class="dropdown" id="genre-dropdown">
-        <button class="dropdown-button">Select Genre</button>
+        <button class="dropdown-button">Select Genred(s)</button>
         <div class="dropdown-content" id="genre-checkboxes">
             <!-- Genre checkboxes will be added dynamically here -->
         </div>
